Change container padding size, fix login register layout on mobile device

--- a/css/style.css
+++ b/css/style.css
@@ -10994,7 +10994,6 @@ a:focus {
   flex: 1 0 auto;
 }
 
-.container,
 .container-fluid,
 .container-sm,
 .container-md,
